# adf_priorizacion_stock_toledano

./: .gitignore  README.md  databricks.yml  pyproject.toml
docs/: 00_README.md  01_arquitectura.md  02_estrategia_implementacion.md  02_operacion.md  03_mapa_adf_priorizacion_stock.md  03_matriz_adf_databricks.md  04_matriz_adf_databricks.md  05_configuracion_databricks_adf.md  05_operacion.md  06_pruebas.md  07_lakebase_evolucion.md  README.md  arquitectura.md  estrategia_implementacion.md  lakebase_evolucion.md  mapa_adf_priorizacion_stock.md  matriz_adf_databricks.md  operacion.md  pruebas.md
lib/sap/: README.md
notebooks/00_setup/: 00_validar_configuracion.py
notebooks/01_control/: 01_nb_get_control_cargas.py  02_nb_get_control_lakebase.py  nb_get_control_cargas.py  nb_get_control_lakebase.py
notebooks/02_extraccion/: 01_nb_ext_saphana_priorizacion_stock.py  02_nb_ext_sharepoint_priorizacion_stock.py  nb_ext_saphana_priorizacion_stock.py  nb_ext_sharepoint_priorizacion_stock.py
notebooks/03_transformacion/: 01_sap.py  02_sharepoint.py
notebooks/04_modelo/: 01_nb_parametrizacion_datos.py  02_nb_creacion_indice_priorizacion.py  nb_creacion_indice_priorizacion.py  nb_parametrizacion_datos.py
scripts/: install_sap_hana_driver_cluster.py
sql/: README.md
tests/: test_03_lakebase_control.py  test_05_sharepoint_mapping.py  test_06_sap_bronze_to_silver_transformations.py  test_09_indice_priorizacion.py  test_config.py  test_control.py  test_model_parameters.py  test_publication_sql.py  test_quality_rules.py  test_sharepoint_bronze_to_silver_transformations.py
(+86 files in other folders)
